@@ -6,7 +6,7 @@ Requires Python 2.1 or better.
 
 This file contains the main make_IPython() starter function.
 
-$Id: ipmaker.py 958 2005-12-27 23:17:51Z fperez $"""
+$Id: ipmaker.py 960 2005-12-28 06:51:01Z fperez $"""
 
 #*****************************************************************************
 #       Copyright (C) 2001-2004 Fernando Perez. <fperez@colorado.edu>
@@ -161,7 +161,8 @@ object? -> Details about 'object'. ?object also works, ?? prints more.
                     'rcfile=s separate_in|si=s separate_out|so=s '
                     'separate_out2|so2=s xmode=s wildcards_case_sensitive! '
                     'magic_docstrings system_verbose! '
-                    'multi_line_specials!')
+                    'multi_line_specials! '
+                    'autoedit_syntax!')
 
     # Options that can *only* appear at the cmd line (not in rcfiles).
     
@@ -224,6 +225,7 @@ object? -> Details about 'object'. ?object also works, ?? prints more.
                       xmode = 'Verbose',
                       wildcards_case_sensitive = 1,
                       magic_docstrings = 0,  # undocumented, for doc generation
+                      autoedit_syntax = 0,
                       )
     
     # Things that will *only* appear in rcfiles (not at the command line).
