@@ -6,7 +6,7 @@
 #  the file COPYING, distributed as part of this software.
 #*****************************************************************************
 
-# $Id: usage.py 926 2005-12-01 18:14:21Z fperez $
+# $Id: usage.py 960 2005-12-28 06:51:01Z fperez $
 
 from IPython import Release
 __author__  = '%s <%s>' % Release.authors['Fernando']
@@ -154,13 +154,12 @@ REGULAR OPTIONS
 
        -[no]automagic
               Make magic commands automatic (without needing their first char-
-              acter to be @).  Type @magic at  the  IPython  prompt  for  more
+              acter to be %).  Type %magic at  the  IPython  prompt  for  more
               information.
 
-       -[no]autoparens
-              Make  IPython automatically call any callable object even if you
-              didn’t type explicit parentheses.  For example, ’str 43’ becomes
-              ’str(43)’ automatically.
+       -[no]autoedit_syntax
+              When a syntax error occurs after editing a file, automatically
+              open the file to the trouble causing line for convenient fixing.
 
        -[no]banner
               Print the intial information banner (default on).
