@@ -124,12 +124,11 @@ Turn automatic indentation on/off.
 .TP
 .B \-[no]automagic
 Make magic commands automatic (without needing their first character
-to be @).  Type @magic at the IPython prompt for more information.
+to be %).  Type %magic at the IPython prompt for more information.
 .TP
-.B \-[no]autoparens
-Make IPython automatically call any callable object even if you didn't
-type explicit parentheses.  For example, 'str 43' becomes 'str(43)'
-automatically.
+.B \-[no]autoedit_syntax
+When a syntax error occurs after editing a file, automatically open the file
+to the trouble causing line for convenient fixing.
 .TP
 .B \-[no]banner
 Print the intial information banner (default on).
